--- a/archives/toutiao-search/2024-04-17.md
+++ b/archives/toutiao-search/2024-04-17.md
@@ -1,56 +1,82 @@
 # 2024-04-17
 
-共 241 条
+共 267 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 17 2024 15:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 17 2024 16:07:34 GMT+0800 (China Standard Time) -->
 1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
-1. [律师：女子泼丈夫开水属家暴或获刑](https://so.toutiao.com/search?keyword=律师：女子泼丈夫开水属家暴或获刑)
+1. [妻子遭家暴后用开水浇丈夫视频曝光](https://so.toutiao.com/search?keyword=妻子遭家暴后用开水浇丈夫视频曝光)
 1. [一季度中国经济增长缘何“超预期”](https://so.toutiao.com/search?keyword=一季度中国经济增长缘何“超预期”)
-1. [一群少年持钢刀飙车疑造成2人伤亡](https://so.toutiao.com/search?keyword=一群少年持钢刀飙车疑造成2人伤亡)
-1. [开封王婆“出战”江西冒雨说媒](https://so.toutiao.com/search?keyword=开封王婆“出战”江西冒雨说媒)
+1. [惠誉下调腾讯和阿里巴巴评级至负面](https://so.toutiao.com/search?keyword=惠誉下调腾讯和阿里巴巴评级至负面)
+1. [律师：女子泼丈夫开水属家暴或获刑](https://so.toutiao.com/search?keyword=律师：女子泼丈夫开水属家暴或获刑)
 1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
 1. [菲总统：军人南海丧命就请美军介入](https://so.toutiao.com/search?keyword=菲总统：军人南海丧命就请美军介入)
-1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
-1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
+1. [开封王婆“出战”江西冒雨说媒](https://so.toutiao.com/search?keyword=开封王婆“出战”江西冒雨说媒)
+1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
 1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
 1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
 1. [兵马俑坑挖2小时挣6000？官方辟谣](https://so.toutiao.com/search?keyword=兵马俑坑挖2小时挣6000？官方辟谣)
+1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
+1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
+1. [知名茶企老板一家三口遇害](https://so.toutiao.com/search?keyword=知名茶企老板一家三口遇害)
+1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
 1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
+1. [成都一业主换燃气表20天欠费1万7](https://so.toutiao.com/search?keyword=成都一业主换燃气表20天欠费1万7)
+1. [媒体人：鹈鹕主帅做了勇敢的决定](https://so.toutiao.com/search?keyword=媒体人：鹈鹕主帅做了勇敢的决定)
+1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
+1. [宝妈在宝宝喝的牛奶盒子里发现异物](https://so.toutiao.com/search?keyword=宝妈在宝宝喝的牛奶盒子里发现异物)
+1. [哈尔滨高楼发生爆燃 大量碎片坠落](https://so.toutiao.com/search?keyword=哈尔滨高楼发生爆燃+大量碎片坠落)
+1. [A股收评：三大指数均涨超2%](https://so.toutiao.com/search?keyword=A股收评：三大指数均涨超2%)
+1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
+1. [若美军多枚反舰导弹齐射 如何防御](https://so.toutiao.com/search?keyword=若美军多枚反舰导弹齐射+如何防御)
+1. [A股大涨 逾千股涨超9%](https://so.toutiao.com/search?keyword=A股大涨+逾千股涨超9%)
+1. [于东来称员工最低收入到手近8000元](https://so.toutiao.com/search?keyword=于东来称员工最低收入到手近8000元)
+1. [两天内两名中管干部被查](https://so.toutiao.com/search?keyword=两天内两名中管干部被查)
+1. [澳门世界杯排名前十选手邱党出局](https://so.toutiao.com/search?keyword=澳门世界杯排名前十选手邱党出局)
+1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
+1. [德媒引用《孙子兵法》谈朔尔茨访华](https://so.toutiao.com/search?keyword=德媒引用《孙子兵法》谈朔尔茨访华)
+1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
+1. [极越回应员工买小米SU7被辞退](https://so.toutiao.com/search?keyword=极越回应员工买小米SU7被辞退)
+1. [川渝燃气公司利润大涨股价连跌](https://so.toutiao.com/search?keyword=川渝燃气公司利润大涨股价连跌)
+1. [博主：线下订华为Pura70要实名登记](https://so.toutiao.com/search?keyword=博主：线下订华为Pura70要实名登记)
+1. [警方回应男子用玻璃杯暴打妻子](https://so.toutiao.com/search?keyword=警方回应男子用玻璃杯暴打妻子)
+1. [4名不满14岁未成年获刑传递啥信号](https://so.toutiao.com/search?keyword=4名不满14岁未成年获刑传递啥信号)
+1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
+1. [媒体：拼凑出长假的调休制度该变了](https://so.toutiao.com/search?keyword=媒体：拼凑出长假的调休制度该变了)
+1. [刘强东的AI数字分身是如何练成的](https://so.toutiao.com/search?keyword=刘强东的AI数字分身是如何练成的)
+1. [美国务院：布林肯访华想聊中俄关系](https://so.toutiao.com/search?keyword=美国务院：布林肯访华想聊中俄关系)
+1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
+1. [俄专家：俄或在近期攻占哈尔科夫](https://so.toutiao.com/search?keyword=俄专家：俄或在近期攻占哈尔科夫)
+1. [媒体：北汽男篮必须“刮骨疗毒”](https://so.toutiao.com/search?keyword=媒体：北汽男篮必须“刮骨疗毒”)
+1. [53岁陈松伶近照曝光](https://so.toutiao.com/search?keyword=53岁陈松伶近照曝光)
+1. [沙利文宣布将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=沙利文宣布将对伊朗实施新制裁)
+1. [本科生县城工作平均月收入5377元](https://so.toutiao.com/search?keyword=本科生县城工作平均月收入5377元)
+1. [四问“武王墩”](https://so.toutiao.com/search?keyword=四问“武王墩”)
+1. [老人买一张坐票占三个座自称腰疼](https://so.toutiao.com/search?keyword=老人买一张坐票占三个座自称腰疼)
+1. [邱毅谈赖清德团队名单中的最大污点](https://so.toutiao.com/search?keyword=邱毅谈赖清德团队名单中的最大污点)
+1. [一群少年持钢刀飙车疑造成2人伤亡](https://so.toutiao.com/search?keyword=一群少年持钢刀飙车疑造成2人伤亡)
 1. [朔尔茨再访华将给欧盟带来示范效应](https://so.toutiao.com/search?keyword=朔尔茨再访华将给欧盟带来示范效应)
 1. [男子18年不养家如今重病被弟弟照顾](https://so.toutiao.com/search?keyword=男子18年不养家如今重病被弟弟照顾)
-1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
 1. [男子称其靓号转网要赔41万违约金](https://so.toutiao.com/search?keyword=男子称其靓号转网要赔41万违约金)
-1. [53岁陈松伶近照曝光](https://so.toutiao.com/search?keyword=53岁陈松伶近照曝光)
 1. [U23亚洲杯积分榜：国奥暂小组垫底](https://so.toutiao.com/search?keyword=U23亚洲杯积分榜：国奥暂小组垫底)
-1. [4名不满14岁未成年获刑传递啥信号](https://so.toutiao.com/search?keyword=4名不满14岁未成年获刑传递啥信号)
 1. [家人给有求生欲的病人拔管是犯罪吗](https://so.toutiao.com/search?keyword=家人给有求生欲的病人拔管是犯罪吗)
 1. [张伟丽直播诉说自己减肥时有多痛苦](https://so.toutiao.com/search?keyword=张伟丽直播诉说自己减肥时有多痛苦)
-1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
-1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
 1. [两女子超市偷喝饮料将空瓶扔垃圾桶](https://so.toutiao.com/search?keyword=两女子超市偷喝饮料将空瓶扔垃圾桶)
-1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
-1. [澳门世界杯排名前十选手邱党出局](https://so.toutiao.com/search?keyword=澳门世界杯排名前十选手邱党出局)
 1. [马英九幕僚：台青多去大陆开开眼界](https://so.toutiao.com/search?keyword=马英九幕僚：台青多去大陆开开眼界)
-1. [媒体：拼凑出长假的调休制度该变了](https://so.toutiao.com/search?keyword=媒体：拼凑出长假的调休制度该变了)
 1. [澳门国际乒联世界杯王楚钦晋级16强](https://so.toutiao.com/search?keyword=澳门国际乒联世界杯王楚钦晋级16强)
 1. [官方回应石家庄一小区上百居民腹泻](https://so.toutiao.com/search?keyword=官方回应石家庄一小区上百居民腹泻)
-1. [极越回应员工买小米SU7被辞退](https://so.toutiao.com/search?keyword=极越回应员工买小米SU7被辞退)
 1. [帮以拦截导弹却不帮乌？白宫回应](https://so.toutiao.com/search?keyword=帮以拦截导弹却不帮乌？白宫回应)
 1. [哈尔滨一小区住户家中突发爆炸起火](https://so.toutiao.com/search?keyword=哈尔滨一小区住户家中突发爆炸起火)
 1. [网友称对“误收燃气费”说法不买账](https://so.toutiao.com/search?keyword=网友称对“误收燃气费”说法不买账)
 1. [借势开封王婆 上饶能否黑红变网红](https://so.toutiao.com/search?keyword=借势开封王婆+上饶能否黑红变网红)
 1. [武王墩墓里的果蔬清单大公开](https://so.toutiao.com/search?keyword=武王墩墓里的果蔬清单大公开)
 1. [专家：伊以冲突对油价影响或有限](https://so.toutiao.com/search?keyword=专家：伊以冲突对油价影响或有限)
-1. [于东来称员工最低收入到手近8000元](https://so.toutiao.com/search?keyword=于东来称员工最低收入到手近8000元)
 1. [朔尔茨二访 对华政策变了吗](https://so.toutiao.com/search?keyword=朔尔茨二访+对华政策变了吗)
-1. [警方回应男子用玻璃杯暴打妻子](https://so.toutiao.com/search?keyword=警方回应男子用玻璃杯暴打妻子)
 1. [全红婵希望巴黎奥运会跳得更完美](https://so.toutiao.com/search?keyword=全红婵希望巴黎奥运会跳得更完美)
 1. [小米汽车回应非创始版SU7何时交付](https://so.toutiao.com/search?keyword=小米汽车回应非创始版SU7何时交付)
 1. [企业一年内疑被执法检查超200次](https://so.toutiao.com/search?keyword=企业一年内疑被执法检查超200次)
 1. [专家解读男生与醉汉冲突是否正当防卫](https://so.toutiao.com/search?keyword=专家解读男生与醉汉冲突是否正当防卫)
 1. [北京已繁育不飞絮杨柳苗木超20万株](https://so.toutiao.com/search?keyword=北京已繁育不飞絮杨柳苗木超20万株)
-1. [沙利文宣布将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=沙利文宣布将对伊朗实施新制裁)
 1. [八宝粥盖子和小米手机镜头完美贴合](https://so.toutiao.com/search?keyword=八宝粥盖子和小米手机镜头完美贴合)
 1. [媒体人：成耀东真是战术鬼才](https://so.toutiao.com/search?keyword=媒体人：成耀东真是战术鬼才)
 1. [律师：火车下铺任何人不得随意借坐](https://so.toutiao.com/search?keyword=律师：火车下铺任何人不得随意借坐)
